--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+
+
 {
   "name": "music-tour-api",
   "version": "1.0.0",
@@ -12,6 +14,9 @@
   "license": "",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.23.0"
   }
 }
