created remaining models

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "root",
+    "username": "postgres",
     "password": "Moondancer1!",
-    "database": "music_tour",
+    "database": "music_info",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
